kubernetes/apps/base/arr-stack/sabnzbd/ingress.yaml
# SABnzbd Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: arr-stack
  labels:
    app.kubernetes.io/name: sabnzbd
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - sabnzbd.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: sabnzbd.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 80
